--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ PUBLIC_URL = http://localhost:3000/
 VITE_APP_BASE_NAME = /
 
 ## Backend API URL
-VITE_APP_API_URL=https://www.api.hadasyduendes.cl/
+VITE_APP_API_URL=http://apihadasyduendes.test/
 
 ## Google Map Key
 VITE_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXv4RQK39CskcIB8fvM1Q7XCofZcLxUXw
