--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "4.1.0",
     "dayjs": "1.11.15",
     "emoji-picker-react": "4.13.2",
+    "file-saver": "^2.0.5",
     "firebase": "12.1.0",
     "formik": "2.4.6",
     "framer-motion": "12.23.12",
@@ -87,6 +88,7 @@
     "vite": "7.1.3",
     "vite-jsconfig-paths": "2.0.1",
     "web-vitals": "5.1.0",
+    "xlsx": "^0.18.5",
     "yup": "1.7.0"
   },
   "scripts": {
