--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@mui/lab": "7.0.0-beta.16",
     "@mui/material": "7.3.1",
     "@mui/system": "7.3.1",
-    "@mui/x-date-pickers": "8.11.2",
+    "@mui/x-date-pickers": "^8.15.0",
     "@mui/x-tree-view": "8.10.2",
     "@phosphor-icons/react": "^2.1.10",
     "@react-pdf/renderer": "4.3.0",
