--- a/.env
+++ b/.env
@@ -1,12 +1,19 @@
 VITE_APP_VERSION = v1.2.2
 GENERATE_SOURCEMAP = false
 
-## Public URL
+# ## Public URL
 PUBLIC_URL = http://localhost:3000/
 VITE_APP_BASE_NAME = /
 
 ## Backend API URL
 VITE_APP_API_URL=http://apihadasyduendes.test/
+
+## Public URL
+# PUBLIC_URL = https://app.hadasyduendes.cl/
+# VITE_APP_BASE_NAME = /
+
+# ## Backend API URL
+# VITE_APP_API_URL=https://api.hadasyduendes.cl/
 
 ## Google Map Key
 VITE_APP_GOOGLE_MAPS_API_KEY=AIzaSyAXv4RQK39CskcIB8fvM1Q7XCofZcLxUXw
